[YE-0] Add modular capabilities.